# accelerant

./: .gitignore  README.md  accelerant_server.py  mypy.ini  optastic_server.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
accelerant/: agent.py  chat.py  chat_interface.py  diag.py  flamegraph.py  fs_sandbox.py  llm.py  lsp.py  patch.py  perf.py  project.py  prompts.py  startup.py  tools.py  trace.py  util.py
examples/: README.md  clone.sh
examples/crates_io_analysis/: scratch.ipynb
optastic/: chat.py  lsp.py  perf.py  project.py  tools.py  util.py
perfparser/: Cargo.toml  perfparser.pyi  pyproject.toml
perfparser-py/: Cargo.toml  perfparser.pyi  pyproject.toml
perfparser-py/src/: perf.rs
perfparser/examples/: debug.rs
perfparser/src/: lib.rs  perf.rs
