[project]
name = "accelerant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "asttokens==3.0.0",
    "attrs==25.1.0",
    "blinker==1.9.0",
    "cattrs==24.1.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "comm==0.2.2",
    "debugpy==1.8.12",
    "decorator==5.2.1",
    "distro==1.9.0",
    "docstring-to-markdown==0.15",
    "executing==2.2.0",
    "flask==3.1.0",
    "griffe==1.14.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==9.0.0",
    "ipython-pygments-lexers==1.1.1",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jedi-language-server==0.41.3",
    "jinja2==3.1.5",
    "jiter==0.11.1",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "llm-utils==0.2.8",
    "lsprotocol==2023.0.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "maturin==1.8.2",
    "mcp==1.18.0",
    "mdurl==0.1.2",
    "multilspy",
    "mypy==1.15.0",
    "mypy-extensions==1.0.0",
    "nest-asyncio==1.6.0",
    "openai==2.6.0",
    "openai-agents==0.4.1",
    "packaging==24.2",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "platformdirs==4.3.6",
    "presto-python-client==0.8.4",
    "prompt-toolkit==3.0.50",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pydantic-settings==2.11.0",
    "pygls==1.3.1",
    "pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pyzmq==26.2.1",
    "referencing==0.37.0",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.27.1",
    "ruff==0.11.6",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sse-starlette==3.0.2",
    "stack-data==0.6.3",
    "starlette==0.48.0",
    "tiktoken==0.9.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "types-requests==2.32.4.20250913",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.3.0",
    "uvicorn==0.38.0",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
]

[tool.uv.sources]
multilspy = { git = "https://github.com/camelid/multilspy.git", rev = "a64a5657c36789ed589454fb6e658637b6e982fd" }

[tool.setuptools]
packages = ["accelerant"]
